# Apsara-Agentic-API

./: .gitignore  ALPHA_TESTING.md  LICENSE  README.md  RELEASE_NOTES_ALPHA.md  RUN_PROJECT.md  TESTER_QUICKSTART.md  pyproject.toml  requirements.txt  run-dev.sh  run.sh  setup.cfg
alembic/: env.py
alembic/versions/: 4ea24f8d77aa_add_agentic_design.py
app/: cli.py  cli_config.py  cli_legacy.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: agent.py  health.py
app/cli/: __init__.py  banner.py  chat.py  doctor.py  events.py  history.py  options.py  parser.py  session.py  ui.py  workspace.py
app/core/: config.py
app/db/: base.py
app/models/: __init__.py  conversation.py  project.py  subscription.py  usage.py  user.py
app/schemas/: __init__.py  user.py
app/services/agent/: __init__.py  executor.py  llm.py  tools.py
src/apsara_cli/: __init__.py
src/apsara_cli/cli/: __init__.py  banner.py  chat.py  doctor.py  history.py  input.py  options.py  parser.py  workspace.py
src/apsara_cli/config/: defaults.py
src/apsara_cli/engine/: executor.py  llm.py  models.py  tools.py
src/apsara_cli/shared/: events.py  text.py  types.py  ui.py
tests/: test_events.py  test_history.py  test_new_tools.py  test_tools.py
