[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apsara-agentic"
version = "0.1.0"
description = "Apsara Agentic - Local coding assistant CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "openai>=1.16.0",
  "litellm>=1.35.0",
  "tomli>=2.0.1",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "prompt_toolkit>=3.0.0",
  "pygments>=2.17.0",
]

[project.scripts]
apsara = "apsara_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apsara_cli*"]
